# NeoKodi

./: .gitignore  README.md  code_complet.txt
.github/workflows/: CI.yml  Release.yml  rust.yml
EpiKodi/: .gitignore  Cargo.toml  config.json  exe.bash  library.db  mon_projet_complet.txt  todo.txt
EpiKodi/.github/workflows/: ci.yaml
EpiKodi/db/: library.db  sources.json
EpiKodi/src/: config.rs  main.rs
EpiKodi/src/constants/: constants.rs  mod.rs
EpiKodi/src/database/: db.rs  library.rs  media_library.rs  media_scan.rs  mod.rs  sources.rs
EpiKodi/src/front/: layout.rs  mod.rs  pages.rs  route.rs  style.rs
EpiKodi/src/gui/: init.rs  layout.rs  mod.rs  pages.rs  route.rs  style.rs
EpiKodi/src/iptv/: parser.rs
EpiKodi/src/logger/: logger.rs
EpiKodi/src/media/: audio.rs  data.rs  image.rs  mod.rs  video.rs
EpiKodi/src/music_download/: downloader.rs  exemple.txt  history.rs  mod.rs
EpiKodi/src/plugin/: functions.rs  manager.rs  mod.rs  plugin_manager.rs
EpiKodi/src/scan/: scan.rs
EpiKodi/src/threading/: command.rs  media_thread.rs  mod.rs
db/: library.db  sources.json
hello_cargo/src/: main.rs
music-dl/: Cargo.toml  command.txt
music-dl/src/: config.rs  downloader.rs  history.rs  main.rs
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
plugin_music/: cargo.toml
plugin_music/src/: lib.rs
tmdb_plugin/: cargo.toml
tmdb_plugin/src/: lib.rs
