[package]
name = "EpiKodi"
version = "0.1.0"
edition = "2021" # 👈 C'EST LA CLÉ ! (2024 n'existe pas encore stable)

[dependencies]
# On garde Dioxus simple et robuste
dioxus = { version = "0.5", features = ["desktop", "router", "hooks"] }
dioxus-desktop = "0.5"

# Tes autres libs
plugin-api = { path = "../plugin_api" } 
libloading = "0.8"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.22.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
warp = "0.3"
rfd = "0.14"
directories = "5.0"
once_cell = "1.18"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.43"
